Fix for Webkit's double rendering bug with font-weight: bold See http://stackoverflow.com/questions/5069752/ios-4-2-webfont-ttf-s-bold-font-weight-rendering-bug

--- a/style.css
+++ b/style.css
@@ -332,6 +332,7 @@ body.index footer.banner section:last-child {
 h1.fancy, footer .fancy h1 {
     line-height: 0.8em;
     font-family: Slackey, Helvetica, sans-serif;
+    font-weight: normal;
     text-transform: uppercase;
     text-shadow: #000 0.02em 0.02em 0.05em, rgba(0,0,0,0.25) 0.125em 0.1em 0.075em;
     letter-spacing: -0.1em;
@@ -343,6 +344,7 @@ h1.fancy, footer .fancy h1 {
 /* Fake text stroke where none supported. */
 .notextstroke h1.fancy,
 .notextstroke footer .fancy h1 {
+    font-weight: bold;
     text-shadow: 
         #000 -0.05em -0.05em 0em,
         #000 -0.05em 0.05em 0em,
